Unexpected behaviour of object mode mirror, doesn't mirror rotation. #68521

Closed
opened 2019-08-10 23:28:26 +02:00 by Emil Assarsson · 11 comments

System Information
Operating system: Darwin-18.5.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 580 OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.8.38

Blender Version
Broken: Was broken in 2.79b. now running version: 2.81 (sub 1), branch: master (modified), commit date: 2019-08-06 20:27, hash: f4e27bc2c9
Worked: (optional)

Short description of error
The object rotation doesn't get mirrored when using object mode mirror.
Image shows object mirrored in object mode.
Green objects illustrates expectation, Red current behaviour.
Skärmavbild 2019-08-10 kl. 23.13.20.png

The current behaviour would be OK if the Only Origins was checked.

Exact steps for others to reproduce the error
Based on MirrorIssue.blend
Mirror the object "Cube" over to negative X in object mode

**System Information** Operating system: Darwin-18.5.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 580 OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.8.38 **Blender Version** Broken: Was broken in 2.79b. now running version: 2.81 (sub 1), branch: master (modified), commit date: 2019-08-06 20:27, hash: `f4e27bc2c9` Worked: (optional) **Short description of error** The object rotation doesn't get mirrored when using object mode mirror. Image shows object mirrored in object mode. Green objects illustrates expectation, Red current behaviour. ![Skärmavbild 2019-08-10 kl. 23.13.20.png](https://archive.blender.org/developer/F7657977/Ska_rmavbild_2019-08-10_kl._23.13.20.png) The current behaviour would be OK if the Only Origins was checked. **Exact steps for others to reproduce the error** Based on [MirrorIssue.blend](https://archive.blender.org/developer/F7660576/MirrorIssue.blend) Mirror the object "Cube" over to negative X in object mode
Author

Added subscriber: @jackdaw

Added subscriber: @jackdaw
Author

This comment was removed by @jackdaw

*This comment was removed by @jackdaw*

Added subscriber: @mont29

Added subscriber: @mont29

Cannot confirm here from quick test...

Please follow our submission template and guidelines, also read these tips about bug reports, and make a complete, valid bug report, with required info, precise description of the issue (only ONE issue per report!), precise steps to reproduce it, small and simple .blend and/or other files to do so if needed, etc.

Cannot confirm here from quick test... Please follow our [submission template and guidelines](https:*developer.blender.org/maniphest/task/edit/form/1/), also read [these tips about bug reports](https:*wiki.blender.org/wiki/Process/Bug_Reports), and make a complete, valid bug report, with required info, ***precise description of the issue*** (only ONE issue per report!), precise steps to reproduce it, **small and simple** .blend and/or other files to do so if needed, etc.
Author

I have update the task with a minimal setup.

I have update the task with a minimal setup.

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Bastien Montagne self-assigned this 2019-08-13 15:47:22 +02:00

Ah thanks for the file, I see what you mean now. Think is, that kind of transform is not possible in Object mode (besides along the object's local axes), you'll have to do it in Edit mode if you want a proper mirroring along an arbitrary axis. Thats not a bug, just a usual limitation of Object mode> Thanks for the report anyway.

Ah thanks for the file, I see what you mean now. Think is, that kind of transform is not possible in Object mode (besides along the object's local axes), you'll have to do it in Edit mode if you want a proper mirroring along an arbitrary axis. Thats not a bug, just a usual limitation of Object mode> Thanks for the report anyway.
Member

Added subscriber: @HDMaster84

Added subscriber: @HDMaster84
Member

@mont29 That is not true! The mirror can be done in object mode. As a proof think of the transformation type. Any transformation that does not scew the object can be represented with the usual location rotation scale representation.

To mirror a arbitrary positioned object in object mode along the X axis do:

  1. mirror x location.
  2. negate x scale of the object.
  3. negate y and z component of the rotation (independent of the selected rotation mode AFAICT!).

I will put together a quick patch, as I need the correct behavior for my work.

@mont29 That is not true! The mirror can be done in object mode. As a proof think of the transformation type. Any transformation that does not scew the object can be represented with the usual location rotation scale representation. To mirror a arbitrary positioned object in object mode along the X axis do: 1. mirror x location. 2. negate x scale of the object. 3. negate y and z component of the rotation (independent of the selected rotation mode AFAICT!). I will put together a quick patch, as I need the correct behavior for my work.

This issue was referenced by ec39d8de4a

This issue was referenced by ec39d8de4adf46161d81fb525a73278fe08a8704

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68521
No description provided.